[gd_scene load_steps=6 format=2]

[ext_resource path="res://LevelRoom.gd" type="Script" id=1]
[ext_resource path="res://ReferenceRect.gd" type="Script" id=2]
[ext_resource path="res://Sprites/UI/Fonts/MiniPixel7-6LKv.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=3]
size = 59
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]

[node name="LevelRoom" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}
camera_limit_top = -270
camera_limit_right = 480
camera_limit_bottom = 0

[node name="ReferenceRect" type="ReferenceRect" parent="."]
margin_top = -270.0
margin_right = 480.0
rect_min_size = Vector2( 480, 270 )
border_color = Color( 0.14902, 1, 0, 1 )
border_width = 4.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="ReferenceRect"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.14902, 1, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "LevelRoom"

[node name="RoomArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomArea"]
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="RoomArea" to="." method="_on_RoomArea_body_entered"]
[connection signal="body_exited" from="RoomArea" to="." method="_on_RoomArea_body_exited"]
